# abstract-transition-systems

./: .gitignore  .gitmodules  Makefile  README.md  ats-web.opam  ats.opam  ats_web.bc.js  dune-project  index.html  index.md
examples/: mcsat_broken_diamond2  mcsat_diamond2  mcsat_unsat1  mcsat_unsat2  smt_unsat3  smt_unsat5  unsat1.cnf
examples/cnf/: sat1  sat2
examples/smt/: diamond2_cong  diamond2_cong_if  diamond3_cong  if_ff_fg  nested_if  unsat4  unsat_cong_fff_conditional6
src/: ATS.ml  CDCL.ml  CDCL.mli  DPLL.ml  DPLL.mli  Hashcons.ml  ID.ml  ID.mli  MCSAT.ml  MCSAT_plus.ml  MCSAT_simple.ml  MCSUP.ml  Run.ml  Run.mli  Run_intf.ml  Sexp_parser.ml  Sexp_parser.mli  Util.ml  Util.mli  dune  smt_types_1.ml
src/web/: ats_web.css  ats_web.html  ats_web.ml  dune
tests/: dune  run_tests.ml  test_dpll.ml
