(executable
 (name ats_web)
 (modes js)
 ;(modes byte)
 ;(js_of_ocaml (javascript_files +gen_js_api/ojs_runtime.js))
 (js_of_ocaml
  (flags --opt 3 +gen_js_api/ojs_runtime.js))
 (flags :standard -warn-error -27-32-33 -no-check-prims)
 (libraries containers ats lwd brr-lwd))

(rule
 (target ats_examples.ml)
 (deps
  ./gen/examples.exe
  (source_tree ../../examples))
 (action
  (with-stdout-to
   %{target}
   (run ./gen/examples.exe))))

(install
 (section bin)
 (package ats-web)
 (files ./ats_web.bc.js ats_web.html ats_web.css))
